--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,47 @@
   text-align: center;
 }
 
+nav{
+  height: 50px;
+  width: 100vw;
+}
+
+#logo{
+  width: 200px;
+  position:absolute;
+  top: 10px;
+  right: 10px;
+}
+
+a{
+  text-decoration: none;
+}
+
+h5 {
+  font-weight: normal;
+  font-size: 18px;
+  font-variant: small-caps;
+  color: black;
+}
+
+#background {
+  background-image: url('./image/travelPhotography.jpg');
+  background-repeat: no-repeat;
+  padding-bottom: 50px;
+  border-bottom-left-radius: 40% 5%;
+  border-bottom-right-radius: 40% 5%;
+}
+
+.panel {
+  background-color: rgba(255, 255, 255, 0.4);
+  display: flex;
+  flex-direction: column;
+  width: fit-content;
+  padding: 15px;
+  padding-top: 0;
+  margin: 25px
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
